[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "safety_gym"
requires-python = ">=3.6"
dependencies = [
    "gym>=0.26.0",
    "joblib~=0.14.0",
    "mujoco_py>=1.22.3",
    "numpy>=1.22.3",
    "xmltodict~=0.12.0",
]
version = "0.0.1"

[tool.setuptools.packages.find]
exclude = ["*.test*"]
namespaces = false

[tool.setuptools.package-data]
safety_gym = ["xmls/*.xml"]
